manifests/deployments/sciencebeam/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sciencebeam
  annotations:
    elifesciences.org/default-project: data-hub
